--- a/np/biologi.html
+++ b/np/biologi.html
@@ -120,7 +120,7 @@
 
 
            <!-- 2. Kroppens organ & Funktion (Behållen: Anatomi) -->
-           <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="kroppen" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://images.unsplash.com/photo-1530210124550-912dc1381cb8?auto=format&fit=crop&w=500&q=80" alt="Anatomi illustration" class="w-full h-full object-cover transition-transform duration-500">
                </div>
