Disease and polishing.

--- a/np/biologi.html
+++ b/np/biologi.html
@@ -132,7 +132,7 @@
 
 
            <!-- 3. Hälsa & Sjukdom (Bild 5: Blodkroppar) -->
-           <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="sjukdom.html" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Red_Blood_Cell.jpg?width=500" alt="Blodkroppar mikroskop" class="w-full h-full object-cover transition-transform duration-500">
                </div>
