--- a/np/biologi.html
+++ b/np/biologi.html
@@ -144,7 +144,7 @@
 
 
            <!-- 4. Sexualitet & Relationer (Ny: Befruktning) -->
-           <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="sex" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Sperm-egg.jpg?width=500" alt="Befruktning" class="w-full h-full object-cover transition-transform duration-500">
                </div>
