--- a/np/biologi.html
+++ b/np/biologi.html
@@ -156,7 +156,7 @@
 
 
            <!-- 5. Evolution & Anpassning (Ny: Fossil) -->
-           <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="evolution" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://commons.wikimedia.org/wiki/Special:FilePath/Ammonite-Fossil.jpg?width=500" alt="Fossil" class="w-full h-full object-cover transition-transform duration-500">
                </div>
@@ -168,7 +168,7 @@
 
 
            <!-- 6. Genetik & Bioteknik (Ny: DNA) -->
-           <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="genetik" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://commons.wikimedia.org/wiki/Special:FilePath/DNA_Double_Helix_by_NHGRI.jpg?width=500" alt="DNA spiral" class="w-full h-full object-cover transition-transform duration-500">
                </div>
