--- a/np/biologi.html
+++ b/np/biologi.html
@@ -180,7 +180,7 @@
 
 
            <!-- 7. Naturvetenskapliga resonemang (Behållen: Miljö) -->
-           <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="resonemang" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://images.unsplash.com/photo-1473448912268-2022ce9509d8?auto=format&fit=crop&w=500&q=80" alt="Miljö och samhälle" class="w-full h-full object-cover transition-transform duration-500">
                </div>
