--- a/np/biologi.html
+++ b/np/biologi.html
@@ -192,7 +192,7 @@
 
 
            <!-- 8. Källkritik (Behållen: Nyheter) -->
-           <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
+           <a href="kallkritik-biologi" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden">
                <div class="image-box w-16 h-16 rounded-xl shrink-0">
                    <img src="https://images.unsplash.com/photo-1504711434969-e33886168f5c?auto=format&fit=crop&w=500&q=80" alt="Nyheter och granskning" class="w-full h-full object-cover transition-transform duration-500">
                </div>
