--- a/np/kallkritik-biologi.html
+++ b/np/kallkritik-biologi.html
@@ -158,7 +158,7 @@
                    <div class="flex items-center gap-2 mb-1">
                        <span class="tag bg-red-500/20 text-red-300 border border-red-500/30">Film</span>
                    </div>
-                   <h3 class="text-lg font-bold text-white group-hover:text-red-300 transition-colors">Källors trovärdighet och relevans</h3>
+                   <h3 class="text-lg font-bold text-white group-hover:text-red-300 transition-colors">Trovärdighet och relevans</h3>
                    <p class="text-xs text-slate-400">Genomgång</p>
                </div>
                <div class="absolute right-4 opacity-0 group-hover:opacity-100 transition-all duration-300 transform translate-x-2 group-hover:translate-x-0">
@@ -212,7 +212,7 @@
                    <div class="flex items-center gap-2 mb-1">
                        <span class="tag bg-indigo-500/20 text-indigo-300 border border-indigo-500/30">PDF</span>
                    </div>
-                   <h3 class="text-lg font-bold text-white group-hover:text-indigo-300 transition-colors">Fördjupning 1</h3>
+                   <h3 class="text-lg font-bold text-white group-hover:text-indigo-300 transition-colors">Svårare frågor 1</h3>
                    <p class="text-xs text-slate-400">C-A nivå</p>
                </div>
                <div class="absolute right-4 opacity-0 group-hover:opacity-100 transition-all duration-300 transform translate-y-2 group-hover:translate-y-0">
@@ -231,7 +231,7 @@
                    <div class="flex items-center gap-2 mb-1">
                        <span class="tag bg-indigo-500/20 text-indigo-300 border border-indigo-500/30">PDF</span>
                    </div>
-                   <h3 class="text-lg font-bold text-white group-hover:text-indigo-300 transition-colors">Fördjupning 2</h3>
+                   <h3 class="text-lg font-bold text-white group-hover:text-indigo-300 transition-colors">Svårare frågor 2</h3>
                    <p class="text-xs text-slate-400">C-A nivå</p>
                </div>
                <div class="absolute right-4 opacity-0 group-hover:opacity-100 transition-all duration-300 transform translate-y-2 group-hover:translate-y-0">
