Undersokningar biologi och lite fysik repetitionsgrejer.

--- a/np/biologi.html
+++ b/np/biologi.html
@@ -204,7 +204,7 @@
 
 
             <!-- 9. Systematiska undersökningar (Bild 2: Provrör) -->
-            <a href="#" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-emerald-900/20 border-emerald-500/30">
+            <a href="undersokningar-biologi" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-emerald-900/20 border-emerald-500/30">
                <div class="image-box w-16 h-16 rounded-xl shrink-0 border-emerald-500/50">
                    <img src="https://images.unsplash.com/photo-1532094349884-543bc11b234d?auto=format&fit=crop&w=500&q=80" alt="Provrör i labb" class="w-full h-full object-cover transition-transform duration-500">
                </div>
