--- a/np/biologi.html
+++ b/np/biologi.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="sv">
 <head>
    <meta charset="UTF-8">
@@ -66,6 +66,16 @@
        .image-box {
            overflow: hidden;
            border: 1px solid rgba(255, 255, 255, 0.1);
+           /* Added flex centering like in fysik.html for consistent icon handling */
+           display: flex;
+           align-items: center;
+           justify-content: center;
+           background: #000; 
+       }
+       
+       /* Override image-box style for main grid images if needed to fill cover */
+       .grid-cols-1 .image-box img {
+           object-fit: cover;
        }
    </style>
 </head>
@@ -101,7 +111,7 @@
 
 
        <!-- Compact Grid Layout -->
-       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-12">
 
 
            <!-- 1. Ekologi & Hållbar utveckling (Bild 7: Solljus i skog) -->
@@ -216,6 +226,58 @@
 
 
        </div>
+
+       <!-- NY SEKTION: Repetition & Bildbank (Tillägg enligt önskemål) -->
+       <div class="border-t border-white/10 pt-8 mt-12">
+            <h2 class="text-2xl font-bold text-white mb-6 px-2 flex items-center gap-2">
+                <!-- Ändrad färg till emerald-400 för att matcha biologi-temat -->
+                <svg class="w-6 h-6 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path></svg>
+                Repetition
+            </h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                
+                <!-- Knapp 1: Alla bilder (Länkar till bilder-biologi.html) -->
+                <a href="bilder-biologi" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-blue-900/10 hover:bg-blue-900/20">
+                    <div class="image-box w-14 h-14 rounded-xl shrink-0 bg-blue-500/10 border-blue-400/20">
+                        <svg class="w-7 h-7 text-blue-300 transition-transform duration-500 group-hover:scale-110" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                        </svg>
+                    </div>
+                    <div class="flex-1 min-w-0">
+                        <h3 class="text-lg font-bold text-white group-hover:text-blue-300 transition-colors">Alla bilder</h3>
+                        <p class="text-xs text-slate-400 mt-1">Samtliga figurer och diagram</p>
+                    </div>
+                </a>
+
+                <!-- Knapp 2: Blandade frågor (E) (Länkar till mix-e-biologi.html) -->
+                <a href="mix-e-biologi" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-green-900/10 hover:bg-green-900/20">
+                    <div class="image-box w-14 h-14 rounded-xl shrink-0 bg-green-500/10 border-green-400/20">
+                        <svg class="w-7 h-7 text-green-300 transition-transform duration-500 group-hover:scale-110" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-6 9l2 2 4-4"></path>
+                        </svg>
+                    </div>
+                    <div class="flex-1 min-w-0">
+                        <h3 class="text-lg font-bold text-white group-hover:text-green-300 transition-colors">Blandade frågor</h3>
+                        <p class="text-xs text-green-400 mt-1 font-semibold tracking-wide">NIVÅ E</p>
+                    </div>
+                </a>
+
+                <!-- Knapp 3: Blandade frågor (C-A) (Länkar till blandat-biologi.pdf) -->
+                <a href="blandat-biologi.pdf" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-orange-900/10 hover:bg-orange-900/20">
+                    <div class="image-box w-14 h-14 rounded-xl shrink-0 bg-orange-500/10 border-orange-400/20">
+                        <svg class="w-7 h-7 text-orange-300 transition-transform duration-500 group-hover:scale-110" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path>
+                        </svg>
+                    </div>
+                    <div class="flex-1 min-w-0">
+                        <h3 class="text-lg font-bold text-white group-hover:text-orange-300 transition-colors">Blandade frågor</h3>
+                        <p class="text-xs text-orange-400 mt-1 font-semibold tracking-wide">NIVÅ C-A</p>
+                    </div>
+                </a>
+
+            </div>
+        </div>
+
    </main>
 
 
