--- a/np/biologi.html
+++ b/np/biologi.html
@@ -237,7 +237,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
                 
                 <!-- Knapp 1: Alla bilder (Länkar till bilder-biologi.html) -->
-                <a href="bilder-biologi" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-blue-900/10 hover:bg-blue-900/20">
+                <a href="bildvisare-biologi" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-blue-900/10 hover:bg-blue-900/20">
                     <div class="image-box w-14 h-14 rounded-xl shrink-0 bg-blue-500/10 border-blue-400/20">
                         <svg class="w-7 h-7 text-blue-300 transition-transform duration-500 group-hover:scale-110" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
@@ -245,7 +245,7 @@
                     </div>
                     <div class="flex-1 min-w-0">
                         <h3 class="text-lg font-bold text-white group-hover:text-blue-300 transition-colors">Alla bilder</h3>
-                        <p class="text-xs text-slate-400 mt-1">Samtliga figurer och diagram</p>
+                        <p class="text-xs text-slate-400 mt-1">Informationsgrafik</p>
                     </div>
                 </a>
 
