Chemistry and polishing.

--- a/np/biologi.html
+++ b/np/biologi.html
@@ -195,7 +195,7 @@
                    <img src="https://images.unsplash.com/photo-1473448912268-2022ce9509d8?auto=format&fit=crop&w=500&q=80" alt="Miljö och samhälle" class="w-full h-full object-cover transition-transform duration-500">
                </div>
                <div class="flex-1 min-w-0">
-                   <h3 class="text-lg font-bold text-white group-hover:text-lime-300 transition-colors">Resonemang</h3>
+                   <h3 class="text-lg font-bold text-white group-hover:text-lime-300 transition-colors">Vetenskapliga resonemang</h3>
                    <p class="text-xs text-slate-400 mt-1 leading-relaxed">Ta ställning och motivera i frågor om miljö och hälsa</p>
                </div>
            </a>
@@ -216,10 +216,10 @@
             <!-- 9. Systematiska undersökningar (Bild 2: Provrör) -->
             <a href="undersokningar-biologi" class="glass-card group p-4 rounded-2xl flex items-center gap-4 relative overflow-hidden bg-emerald-900/20 border-emerald-500/30">
                <div class="image-box w-16 h-16 rounded-xl shrink-0 border-emerald-500/50">
-                   <img src="https://images.unsplash.com/photo-1532094349884-543bc11b234d?auto=format&fit=crop&w=500&q=80" alt="Provrör i labb" class="w-full h-full object-cover transition-transform duration-500">
+                   <img src="https://images.unsplash.com/photo-1532187863486-abf9dbad1b69?auto=format&fit=crop&w=300&q=80" alt="Provrör i labb" class="w-full h-full object-cover transition-transform duration-500">
                </div>
                <div class="flex-1 min-w-0">
-                   <h3 class="text-lg font-bold text-white group-hover:text-emerald-200 transition-colors">Undersökningar</h3>
+                   <h3 class="text-lg font-bold text-white group-hover:text-emerald-200 transition-colors">Systematiska undersökningar</h3>
                    <p class="text-xs text-emerald-200/70 mt-1 leading-relaxed">Planera, genomföra och utvärdera experiment</p>
                </div>
            </a>
