Atom and matter in chemistry.

--- a/np/bildvisare-biologi.html
+++ b/np/bildvisare-biologi.html
@@ -157,7 +157,7 @@
        document.addEventListener('keydown', (e) => {
            if (e.key === 'ArrowRight' || e.key === 'Space') changeImage(1);
            if (e.key === 'ArrowLeft') changeImage(-1);
-           if (e.key === 'Escape') window.location.href = 'index.html'; // Lägg till Escape om du vill kunna gå tillbaka
+           if (e.key === 'Escape') window.location.href = 'biologi.html'; // Lägg till Escape om du vill kunna gå tillbaka
        });
 
 
