--- a/np/biologi.html
+++ b/np/biologi.html
@@ -118,7 +118,7 @@
     <!-- Nav -->
     <nav class="w-full px-6 py-4 flex justify-between items-center z-10 glass border-b-0 border-white/5 relative">
         <div class="text-xl font-extrabold tracking-tighter text-white flex items-center gap-2">
-            <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition-opacity">
+            <a href="no" class="flex items-center gap-2 hover:opacity-80 transition-opacity">
                 <span class="bg-emerald-600 w-8 h-8 rounded-lg flex items-center justify-center text-xs text-white">NP</span>
                 <span>Guiden <span class="text-emerald-400">| Biologi</span></span>
             </a>
